<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/ZakatToolbarView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/text_Background_Color"
            android:layout_marginTop="10dp"
            android:theme="@style/toolbar_theme"
            android:background="@drawable/bg">
        </androidx.appcompat.widget.Toolbar>
        <TextView
            android:id="@+id/zakatRules_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/zakat_rules"
            android:textAllCaps="true"
            android:textColor="@color/textColor"
            android:textSize="25dp" />

        <LinearLayout
            android:id="@+id/ImageLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp">

            <ImageButton
                android:id="@+id/essentialImgBtn"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg"
                android:layout_marginLeft="5dp"
                android:src="@drawable/essential_icon" />

            <ImageButton
                android:id="@+id/conditionImgBtn"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg"
                android:src="@drawable/conditions" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/cashLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/square_angle_big"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cashTextview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/cash"
                android:layout_marginTop="10dp"
                android:textAllCaps="true"
                android:textColor="@color/white_textcolor"
                android:textSize="25dp" />

            <EditText
                android:id="@+id/cashEditText"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="200dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_rounded"
                android:hint="000000000"
                android:gravity="center"
                android:inputType="number"
                android:textColorHint="@color/white_textcolor"
                android:textSize="25dp"
                android:textStyle="italic"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/goldLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/square_angle_big"
            android:orientation="vertical">

            <TextView
                android:id="@+id/goldTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/gold"
                android:textAllCaps="true"
                android:textColor="@color/white_textcolor"
                android:textSize="25dp" />

            <EditText
                android:id="@+id/goldEditText"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="200dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_rounded"
                android:hint="000000000"
                android:inputType="number"
                android:gravity="center"
                android:textColorHint="@color/white_textcolor"
                android:textSize="25dp"
                android:textStyle="italic" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/assetLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:background="@drawable/square_angle_big">

            <TextView
                android:id="@+id/assetTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/asset"
                android:textAllCaps="true"
                android:textColor="@color/white_textcolor"
                android:textSize="25dp" />

            <EditText
                android:id="@+id/assetEditText"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="200dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_rounded"
                android:hint="000000000"
                android:textStyle="italic"
                android:inputType="number"
                android:gravity="center"
                android:textColorHint="@color/white_textcolor"
                android:textSize="25dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/totalLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:background="@drawable/square_angle_big">

            <TextView
                android:id="@+id/totalTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/total"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:textAllCaps="true"
                android:textColor="@color/white_textcolor"
                android:textSize="25dp" />

            <EditText
                android:id="@+id/Zakat_Input"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="200dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_rounded"
                android:hint="000000000"
                android:inputType="number"
                android:gravity="center"
                android:textColorHint="@color/white_textcolor"
                android:textSize="25dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/zakat_AmountLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_weight="2"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/total_zakat_amount_rounded_background">

            <TextView
                android:id="@+id/zakat_AmountButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="230dp"
                android:gravity="center"
                android:text="@string/zakat_amount"
                android:textAllCaps="true"
                android:textColor="@color/black_text_color"
                android:textSize="20dp"/>

            <TextView
                android:id="@+id/zakat_Result"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="185dp"
                android:text="000000000"
                android:textColor="@color/white_textcolor"
                android:gravity="center"
                android:inputType="number"
                android:background="@drawable/edit_rounded"
                android:textSize="25dp" />
        </RelativeLayout>

    </LinearLayout>

</ScrollView>
